Print message when a file can't be copied to a media player.

Patch by Sergey Ivanov <123kash@gmail.com>. Thanks!

BUG: 203820